[gd_scene load_steps=9 format=3 uid="uid://brca1m1xhsw7k"]

[ext_resource type="Script" path="res://Scenes/Interactive/Door/door.gd" id="1_18mrr"]
[ext_resource type="Texture2D" uid="uid://dmiuk54241c4m" path="res://Scenes/Assets/Gridmap/Textures/door-d845ac6c640da5c061e5bf569f0396ac_door_texture.png" id="2_qu5sr"]
[ext_resource type="FontFile" uid="uid://bf2rgdidvvyyd" path="res://Scenes/Assets/Font/DoulosSILR.ttf" id="3_dbcgj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p2rlv"]
resource_name = "door1_material"
metallic = 0.4
roughness = 0.272166

[sub_resource type="ArrayMesh" id="ArrayMesh_ojva6"]
_surfaces = [{
"aabb": AABB(-0.01, 2.98023e-10, 5e-05, 0.02, 0.001, 0.00996),
"format": 34896613377,
"index_count": 120,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 1, 0, 3, 0, 0, 0, 4, 0, 0, 0, 3, 0, 3, 0, 5, 0, 4, 0, 6, 0, 4, 0, 5, 0, 5, 0, 7, 0, 6, 0, 2, 0, 6, 0, 7, 0, 7, 0, 1, 0, 2, 0, 7, 0, 3, 0, 1, 0, 7, 0, 5, 0, 3, 0, 4, 0, 2, 0, 0, 0, 4, 0, 6, 0, 2, 0, 8, 0, 10, 0, 9, 0, 9, 0, 11, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 15, 0, 12, 0, 13, 0, 14, 0, 16, 0, 12, 0, 15, 0, 17, 0, 17, 0, 18, 0, 12, 0, 19, 0, 20, 0, 9, 0, 19, 0, 22, 0, 21, 0, 9, 0, 10, 0, 19, 0, 17, 0, 15, 0, 13, 0, 17, 0, 13, 0, 21, 0, 8, 0, 16, 0, 10, 0, 16, 0, 19, 0, 10, 0, 16, 0, 14, 0, 19, 0, 14, 0, 22, 0, 19, 0, 20, 0, 11, 0, 9, 0, 20, 0, 23, 0, 11, 0, 21, 0, 20, 0, 19, 0, 21, 0, 22, 0, 18, 0, 16, 0, 8, 0, 11, 0, 16, 0, 23, 0, 13, 0, 11, 0, 23, 0, 16, 0, 18, 0, 17, 0, 21, 0, 14, 0, 12, 0, 22, 0, 12, 0, 18, 0, 22, 0, 20, 0, 21, 0, 13, 0, 13, 0, 23, 0, 20, 0),
"name": "door1_material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 50, 179, 189, 255, 0, 0, 0, 0, 204, 76, 0, 0, 0, 0, 0, 0, 204, 76, 189, 255, 0, 0, 0, 0, 50, 179, 0, 0, 0, 0, 255, 255, 50, 179, 189, 255, 0, 0, 255, 255, 50, 179, 0, 0, 0, 0, 255, 255, 204, 76, 189, 255, 0, 0, 255, 255, 204, 76, 0, 0, 0, 0, 31, 198, 255, 255, 40, 112, 0, 0, 31, 198, 0, 0, 8, 108, 0, 0, 31, 198, 0, 0, 40, 112, 0, 0, 31, 198, 255, 255, 8, 108, 0, 0, 226, 234, 255, 255, 97, 111, 0, 0, 95, 220, 255, 255, 26, 108, 0, 0, 95, 220, 255, 255, 64, 112, 0, 0, 226, 234, 255, 255, 59, 107, 0, 0, 250, 205, 255, 255, 94, 111, 0, 0, 216, 234, 0, 0, 62, 107, 0, 0, 216, 234, 0, 0, 94, 111, 0, 0, 250, 205, 0, 0, 94, 111, 0, 0, 250, 205, 0, 0, 62, 107, 0, 0, 105, 220, 0, 0, 28, 108, 0, 0, 105, 220, 0, 0, 60, 112, 0, 0, 250, 205, 255, 255, 62, 107, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_7klj3"]
resource_name = "Root Scene_door1"
_surfaces = [{
"aabb": AABB(-0.01, 2.98023e-10, 5e-05, 0.02, 0.001, 0.00996),
"attribute_data": PackedByteArray(37, 123, 143, 14, 255, 127, 71, 135, 255, 127, 143, 14, 37, 123, 71, 135, 8, 61, 80, 0, 255, 179, 135, 255, 255, 179, 80, 0, 8, 61, 135, 255, 37, 123, 71, 135, 255, 127, 255, 255, 255, 127, 71, 135, 37, 123, 255, 255, 255, 179, 80, 0, 8, 61, 135, 255, 8, 61, 80, 0, 255, 179, 135, 255, 112, 113, 88, 13, 112, 113, 255, 255, 74, 118, 255, 255, 74, 118, 88, 13, 37, 123, 255, 255, 37, 123, 88, 13, 74, 118, 88, 13, 74, 118, 255, 255, 121, 74, 69, 135, 126, 70, 64, 139, 121, 74, 64, 139, 126, 70, 69, 135, 89, 75, 89, 141, 161, 73, 119, 134, 161, 73, 89, 141, 89, 75, 119, 134, 232, 71, 89, 141, 47, 74, 121, 137, 196, 69, 228, 141, 47, 74, 228, 141, 196, 69, 121, 137, 41, 72, 126, 134, 127, 75, 42, 141, 41, 72, 42, 141, 126, 70, 42, 141, 126, 70, 126, 134, 127, 75, 126, 134, 189, 74, 149, 141, 160, 69, 14, 140, 160, 69, 149, 141, 189, 74, 14, 140, 47, 74, 14, 133, 196, 69, 14, 133, 47, 74, 68, 135, 196, 69, 68, 135, 47, 74, 68, 135, 196, 69, 68, 135, 47, 74, 94, 136, 196, 69, 94, 136, 189, 74, 135, 138, 189, 74, 121, 135, 160, 69, 121, 135, 160, 69, 135, 138, 211, 68, 126, 134, 119, 68, 119, 134, 119, 68, 89, 141, 232, 71, 119, 134, 211, 68, 42, 141, 47, 74, 94, 136, 196, 69, 94, 136, 47, 74, 121, 137, 196, 69, 121, 137, 189, 74, 135, 138, 160, 69, 14, 140, 189, 74, 14, 140, 160, 69, 135, 138),
"format": 34896613399,
"index_count": 120,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 1, 0, 3, 0, 0, 0, 4, 0, 6, 0, 5, 0, 5, 0, 7, 0, 4, 0, 8, 0, 10, 0, 9, 0, 9, 0, 11, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 15, 0, 12, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 25, 0, 27, 0, 24, 0, 28, 0, 30, 0, 29, 0, 29, 0, 31, 0, 28, 0, 29, 0, 30, 0, 32, 0, 33, 0, 35, 0, 34, 0, 34, 0, 36, 0, 33, 0, 37, 0, 39, 0, 38, 0, 37, 0, 41, 0, 40, 0, 38, 0, 42, 0, 37, 0, 43, 0, 45, 0, 44, 0, 43, 0, 44, 0, 46, 0, 47, 0, 49, 0, 48, 0, 49, 0, 50, 0, 48, 0, 51, 0, 53, 0, 52, 0, 53, 0, 54, 0, 52, 0, 55, 0, 57, 0, 56, 0, 55, 0, 58, 0, 57, 0, 40, 0, 39, 0, 37, 0, 40, 0, 41, 0, 59, 0, 32, 0, 61, 0, 60, 0, 32, 0, 62, 0, 29, 0, 60, 0, 62, 0, 32, 0, 59, 0, 63, 0, 40, 0, 64, 0, 66, 0, 65, 0, 66, 0, 67, 0, 65, 0, 68, 0, 70, 0, 69, 0, 69, 0, 71, 0, 68, 0),
"material": SubResource("StandardMaterial3D_p2rlv"),
"name": "door1_material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 72,
"vertex_data": PackedByteArray(0, 0, 50, 179, 189, 255, 84, 213, 0, 0, 204, 76, 0, 0, 84, 213, 0, 0, 204, 76, 189, 255, 84, 213, 0, 0, 50, 179, 0, 0, 84, 213, 255, 255, 50, 179, 189, 255, 255, 255, 0, 0, 50, 179, 0, 0, 255, 255, 0, 0, 50, 179, 189, 255, 255, 255, 255, 255, 50, 179, 0, 0, 255, 255, 255, 255, 204, 76, 189, 255, 84, 213, 255, 255, 50, 179, 0, 0, 84, 213, 255, 255, 50, 179, 189, 255, 84, 213, 255, 255, 204, 76, 0, 0, 84, 213, 0, 0, 204, 76, 189, 255, 0, 0, 255, 255, 204, 76, 0, 0, 0, 0, 255, 255, 204, 76, 189, 255, 0, 0, 0, 0, 204, 76, 0, 0, 0, 0, 255, 255, 204, 76, 0, 0, 255, 255, 0, 0, 204, 76, 0, 0, 255, 255, 0, 0, 50, 179, 0, 0, 255, 255, 255, 255, 50, 179, 0, 0, 255, 255, 255, 255, 50, 179, 189, 255, 255, 191, 0, 0, 50, 179, 189, 255, 255, 191, 0, 0, 204, 76, 189, 255, 255, 191, 255, 255, 204, 76, 189, 255, 255, 191, 31, 198, 255, 255, 40, 112, 255, 191, 31, 198, 0, 0, 8, 108, 255, 191, 31, 198, 0, 0, 40, 112, 255, 191, 31, 198, 255, 255, 8, 108, 255, 191, 226, 234, 255, 255, 97, 111, 1, 192, 95, 220, 255, 255, 26, 108, 255, 191, 95, 220, 255, 255, 64, 112, 255, 191, 226, 234, 255, 255, 59, 107, 1, 192, 250, 205, 255, 255, 94, 111, 255, 191, 226, 234, 255, 255, 97, 111, 63, 213, 216, 234, 0, 0, 62, 107, 67, 213, 226, 234, 255, 255, 59, 107, 63, 213, 216, 234, 0, 0, 94, 111, 68, 213, 250, 205, 0, 0, 94, 111, 75, 0, 31, 198, 0, 0, 8, 108, 111, 1, 250, 205, 0, 0, 62, 107, 71, 0, 105, 220, 0, 0, 28, 108, 0, 0, 105, 220, 0, 0, 60, 112, 0, 0, 31, 198, 0, 0, 40, 112, 111, 1, 216, 234, 0, 0, 62, 107, 31, 255, 95, 220, 255, 255, 26, 108, 31, 255, 226, 234, 255, 255, 59, 107, 30, 255, 105, 220, 0, 0, 28, 108, 31, 255, 31, 198, 255, 255, 40, 112, 5, 192, 31, 198, 0, 0, 40, 112, 5, 192, 250, 205, 255, 255, 94, 111, 5, 192, 250, 205, 0, 0, 94, 111, 5, 192, 250, 205, 255, 255, 94, 111, 1, 192, 250, 205, 0, 0, 94, 111, 16, 192, 95, 220, 255, 255, 64, 112, 18, 192, 105, 220, 0, 0, 60, 112, 33, 192, 250, 205, 0, 0, 62, 107, 143, 254, 31, 198, 0, 0, 8, 108, 143, 254, 31, 198, 255, 255, 8, 108, 143, 254, 250, 205, 255, 255, 62, 107, 143, 254, 216, 234, 0, 0, 94, 111, 220, 0, 31, 198, 255, 255, 8, 108, 5, 192, 31, 198, 255, 255, 40, 112, 5, 192, 250, 205, 255, 255, 62, 107, 255, 191, 216, 234, 0, 0, 62, 107, 220, 0, 95, 220, 255, 255, 64, 112, 33, 192, 105, 220, 0, 0, 60, 112, 4, 192, 226, 234, 255, 255, 97, 111, 255, 191, 216, 234, 0, 0, 94, 111, 226, 191, 250, 205, 0, 0, 62, 107, 36, 255, 95, 220, 255, 255, 26, 108, 36, 255, 105, 220, 0, 0, 28, 108, 36, 255, 250, 205, 255, 255, 62, 107, 36, 255, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 170, 42, 170, 42, 170, 42, 170, 42, 170, 42, 170, 42, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 191, 255, 191, 255, 191, 255, 191, 255, 191, 255, 191, 255, 191, 255, 191, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 35, 254, 72, 124, 247, 255, 3, 128, 246, 255, 3, 128, 35, 254, 72, 124, 88, 255, 177, 126, 162, 42, 191, 42, 157, 42, 193, 42, 163, 42, 190, 42, 156, 42, 193, 42, 214, 63, 171, 255, 54, 63, 107, 254, 216, 63, 175, 255, 255, 127, 255, 63, 255, 127, 255, 63, 54, 63, 107, 254, 121, 64, 137, 191, 117, 64, 133, 191, 144, 64, 160, 191, 95, 64, 110, 191, 10, 3, 10, 3, 10, 3, 10, 3, 10, 3, 10, 3, 10, 3, 10, 3, 26, 254, 36, 254, 26, 254, 36, 254, 27, 254, 36, 254, 27, 254, 35, 254, 201, 64, 53, 191, 201, 64, 53, 191, 201, 64, 53, 191, 201, 64, 53, 191, 134, 63, 11, 255, 244, 252, 235, 121, 244, 252, 235, 121, 95, 255, 192, 126, 134, 63, 11, 255, 211, 1, 226, 1, 212, 1, 226, 1, 212, 1, 226, 1, 214, 1, 226, 1, 144, 191, 132, 64, 146, 191, 134, 64, 158, 191, 146, 64, 133, 191, 121, 64)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ojva6")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wvsc3"]
albedo_texture = ExtResource("2_qu5sr")

[sub_resource type="BoxShape3D" id="BoxShape3D_ilcgy"]
size = Vector3(2.12364, 1.86026, 1.66794)

[node name="Door" type="Node3D"]
script = ExtResource("1_18mrr")

[node name="Texture" type="MeshInstance3D" parent="."]
transform = Transform3D(50, 0, 0, 0, -1.19209e-05, 200, 0, -100, -2.38419e-05, 0, 0, 0)
mesh = SubResource("ArrayMesh_7klj3")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_wvsc3")

[node name="InteractArea" type="Area3D" parent="."]
collision_layer = 64

[node name="InteractBox" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00237274, 1.06642, -0.119492)
shape = SubResource("BoxShape3D_ilcgy")

[node name="NeededKey" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NeededKey"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = -145.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_dbcgj")
theme_override_font_sizes/font_size = 60
text = "Está cerrada bajo llave."

[connection signal="body_entered" from="InteractArea" to="." method="_on_player_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_player_exited"]
